--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
           node-version: 18
 
       - name: Build
-        run: npm run install && npm run build
+        run: npm install && npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
